# setbookmarks

./: Makefile.am  Makefile.inc  autogen.sh  configure.in  setbookmarks.c  setbookmarks.spec.in
po/: POTFILES.in
